[package]
name = "http-client-stream-body-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures-util = { version = "0.3.28", features = ["io"] }
reqwest = { version = "0.11.16", features = ["stream"] }
tokio = { version = "1.27.0", features = ["full", "tracing"] }
